--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         },
         "hero": {
           "type": "image",
-          "url": "https://sv1.picz.in.th/images/2022/04/12/8AsdQV.jpg",
+          "url": "https://sv1.picz.in.th/images/2022/04/12/8AsdQV.jpg?w=auto",
           "size": "full",
           "aspectRatio": "1:1"
         },
@@ -137,7 +137,7 @@
         },
         "hero": {
           "type": "image",
-          "url": "https://sv1.picz.in.th/images/2022/04/12/8A6S51.jpg",
+          "url": "https://sv1.picz.in.th/images/2022/04/12/8A6S51.jpg?w=auto",
           "size": "full",
           "aspectRatio": "1:1"
         },
@@ -199,7 +199,7 @@
         },
         "hero": {
           "type": "image",
-          "url": "https://sv1.picz.in.th/images/2022/04/12/8AreSR.jpg",
+          "url": "https://sv1.picz.in.th/images/2022/04/12/8AreSR.jpg?w=auto",
           "size": "full",
           "aspectRatio": "1:1"
         },
@@ -261,7 +261,7 @@
         },
         "hero": {
           "type": "image",
-          "url": "https://sv1.picz.in.th/images/2022/04/12/8Au67u.jpg",
+          "url": "https://sv1.picz.in.th/images/2022/04/12/8Au67u.jpg?w=auto",
           "size": "full",
           "aspectRatio": "1:1"
         },
