--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         },
         "hero": {
           "type": "image",
-          "url": "https://sv1.picz.in.th/images/2022/04/12/8AsdQV.jpg?w=auto",
+          "url": "https://i.postimg.cc/W46RyVxk/8AsdQV.jpg",
           "size": "full",
           "aspectRatio": "1:1"
         },
