--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       await liff.shareTargetPicker([
        {
   "type": "flex",
-  "altText": "Flex Message",
+  "altText": "สมาชิกใหม่ 100 ฟรี 100",
   "contents": {
     "type": "carousel",
     "contents": [
@@ -108,7 +108,7 @@
               "action": {
                 "type": "uri",
                 "label": "รับฟรี 100 บาท",
-                "uri": "https://bit.ly/3754eTL"
+                "uri": "https://bit.ly/38KUKNS"
               },
               "style": "primary"
             }
@@ -170,7 +170,7 @@
               "action": {
                 "type": "uri",
                 "label": "รับฟรี 100 บาท",
-                "uri": "https://bit.ly/3754eTL"
+                "uri": "https://bit.ly/38KUKNS"
               },
               "style": "primary"
             }
@@ -232,7 +232,7 @@
               "action": {
                 "type": "uri",
                 "label": "รับฟรี 100 บาท",
-                "uri": "https://bit.ly/3754eTL"
+                "uri": "https://bit.ly/38KUKNS"
               },
               "style": "primary"
             }
@@ -294,7 +294,7 @@
               "action": {
                 "type": "uri",
                 "label": "รับฟรี 100 บาท",
-                "uri": "https://bit.ly/3754eTL"
+                "uri": "https://bit.ly/38KUKNS"
               },
               "style": "primary"
             }
